--- a/configure.ac
+++ b/configure.ac
@@ -76,8 +76,24 @@ AC_SUBST(WINSOCK_LIBS)
 
 dnl Gtk+
 AM_PATH_GLIB_2_0(2.8.0,, AC_MSG_ERROR([glib-2.x is required]), gthread gobject)
-AM_PATH_GTK_2_0(2.8.0,, AC_MSG_ERROR([gtk+-2.x is required]), gthread gobject)
-AC_DEFINE([USE_GTK2],[],[Use Gtk+2.x instead of Gtk+1.2])
+dnl GTK 3 or 2 
+AC_ARG_WITH(gtk3,
+             AC_HELP_STRING([--with-gtk3],
+                        [use Gtk+3 instead of Gtk+2]),
+                        [use_gtk3=yes])
+if test x"${use_gtk3}" = "xyes"; then
+GTK3_CFLAGS="`pkg-config gtk+-3.0 --cflags`"
+GTK3_LIBS="`pkg-config gtk+-3.0 --libs`"
+dnl    AM_PATH_GTK_3_0(3.22.0,, AC_MSG_ERROR([gtk+-2.x is required]), gthread gobject)
+AC_DEFINE([USE_GTK3],[],[Use Gtk+3.x instead of Gtk+2])
+else
+AM_PATH_GTK_2_0(2.24.0,, AC_MSG_ERROR([gtk+-2.x is required]), gthread gobject)
+AC_DEFINE([USE_GTK2],[],[Use Gtk+2.x instead of Gtk+3])
+GTK3_CFLAGS=""
+GTK3_LIBS=""
+fi
+AC_SUBST(GTK3_LIBS)
+AC_SUBST(GTK3_CFLAGS)
 
 dnl gresource
 AC_PATH_PROG([GLIB_COMPILE_RESOURCES], [glib-compile-resources])
