Prepare for Gtk+3

--- a/Makefile.in
+++ b/Makefile.in
@@ -285,8 +285,7 @@ AWK = @AWK@
 BUILD_REVISION = @BUILD_REVISION@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
-CFLAGS = @CFLAGS@ -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED \
-	-DGSEAL_ENABLE
+CFLAGS = @CFLAGS@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CYGPATH_W = @CYGPATH_W@
@@ -460,7 +459,7 @@ EXTRA_DIST = autogen.sh\
 BUILT_SOURCES = resources.c resources.h
 man_MANS = hskymon.1
 resource_files = $(shell $(GLIB_COMPILE_RESOURCES) --sourcedir=$(srcdir) --generate-dependencies $(srcdir)/gresource.xml)
-INCLUDES = @GTK_CFLAGS@  $(GTK3_CFLAGS) $(GTKMAC_CFLAGS) $(XMLRPC_CFLAGS) $(XML_CPPFLAGS) $(DISABLE_DEPRECATED)
+INCLUDES = @GTK_CFLAGS@  $(GTK3_CFLAGS) $(GTKMAC_CFLAGS) $(XMLRPC_CFLAGS) $(XML_CPPFLAGS)
 LDADD = @GTK_LIBS@  $(GTK3_LIBS) $(GTKMAC_LIBS) $(WINMM_LIBS) $(WINSOCK_LIBS) $(XMLRPC_LIBS) $(XML_LIBS) $(HSKYMON_RES)
 GZIP_ENV = 
 BZIP2_ENV = 
