Prepare for Gtk+3

--- a/Makefile.in
+++ b/Makefile.in
@@ -285,7 +285,8 @@ AWK = @AWK@
 BUILD_REVISION = @BUILD_REVISION@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
-CFLAGS = @CFLAGS@
+CFLAGS = @CFLAGS@ "-DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED \
+	-DGSEAL_ENABLE"
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CYGPATH_W = @CYGPATH_W@
