--- a/configure.ac
+++ b/configure.ac
@@ -4,8 +4,8 @@ PACKAGE=hskymon
 
 dnl version number
 MAJOR_VERSION=3
-MINOR_VERSION=3
-MICRO_VERSION=8
+MINOR_VERSION=5
+MICRO_VERSION=0
 BUILD_REVISION=0
 EXTRA_VERSION=
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION$EXTRA_VERSION
@@ -185,12 +185,11 @@ AC_ARG_WITH(maintain,
              
 
 if test x"${use_maint}" = "xyes"; then
-	DISABLE_DEPRECATED="-g -DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED"
+	DISABLE_DEPRECATED="-g -DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGSEAL_ENABLE"
 else
 	DISABLE_DEPRECATED=""
 fi
 AC_SUBST(DISABLE_DEPRECATED)
-
 
 dnl Check for OpenSSL
 AC_ARG_ENABLE(ssl,
