--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,9 @@
 bin_PROGRAMS    = hskymon
-SUBDIRS = . libnova std_data debian sample
+SUBDIRS = . libnova std_data debian sample icons
 hskymon_SOURCES   =\
 	 main.c calcpa.c fc.c fc_output.c adc.c lunar.c solar.c earth.c mercury.c venus.c mars.c jupiter.c saturn.c uranus.c neptune.c pluto.c rise_set.c sidereal_time.c vsop87.c julian_day.c utility.c transform.c precession.c nutation.c dynamical_time.c http-client.c main.h configfile.c skymon.c treeview.c telstat.c remoteObjects.c hsc.h votable.c json_parse.c resources.c votable.h remoteObjects.h configfile.h esostd.h ssl.h gen2.h post.h post_sdss.h post_lamost.h post_smoka.h post_hst.h post_eso.h get_gemini.h resources.h
 
-CLEANFILES      = *~ libnova/*~ std_data/*~ debian/*~ sample/*~
+CLEANFILES      = *~ libnova/*~ std_data/*~ debian/*~ sample/*~ icons/*~
 DISTCLEANFILES  = .deps/*.P
 AM_CPPFLAGS = -DLOCALEDIR=\""$(localedir)"\"
 
@@ -34,7 +34,6 @@ BUILT_SOURCES=resources.c resources.h
 
 man_MANS = hskymon.1
 
-CLEANFILES      += icons/*~
 DISTCLEANFILES  = 
 AM_CPPFLAGS = -DLOCALEDIR=\""$(localedir)"\"
 
