--- a/configure.ac
+++ b/configure.ac
@@ -41,6 +41,7 @@ AC_FUNC_ALLOCA
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
+AC_CHECK_HEADERS(error.h,AC_DEFINE(HAVE_ERROR_H,1))
 AC_CHECK_HEADERS([pwd.h sys/utsname.h])
 
 os_osx=no
