--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -179,6 +179,7 @@ OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 OPENSSL_CFLAGS = @OPENSSL_CFLAGS@
 OPENSSL_LIBS = @OPENSSL_LIBS@
+OSX_LDADD = @OSX_LDADD@
 OTOOL = @OTOOL@
 OTOOL64 = @OTOOL64@
 PACKAGE = @PACKAGE@
