--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -298,6 +298,7 @@ EXTRA_DIST = \
 	lgs_icon.png\
 	moon_icon.png\
 	pdf_icon.png\
+	pm_icon.png\
 	safari_icon.png\
 	sky_icon.png\
 	subaru_icon.png
