--- a/Makefile.in
+++ b/Makefile.in
@@ -106,18 +106,18 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(man1dir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_hskymon_OBJECTS = main.$(OBJEXT) gtkut.$(OBJEXT) calcpa.$(OBJEXT) \
-	fc.$(OBJEXT) fc_output.$(OBJEXT) adc.$(OBJEXT) lunar.$(OBJEXT) \
-	solar.$(OBJEXT) earth.$(OBJEXT) mercury.$(OBJEXT) \
-	venus.$(OBJEXT) mars.$(OBJEXT) jupiter.$(OBJEXT) \
-	saturn.$(OBJEXT) uranus.$(OBJEXT) neptune.$(OBJEXT) \
-	pluto.$(OBJEXT) rise_set.$(OBJEXT) sidereal_time.$(OBJEXT) \
-	vsop87.$(OBJEXT) julian_day.$(OBJEXT) utility.$(OBJEXT) \
-	transform.$(OBJEXT) precession.$(OBJEXT) nutation.$(OBJEXT) \
-	dynamical_time.$(OBJEXT) http-client.$(OBJEXT) \
-	configfile.$(OBJEXT) skymon.$(OBJEXT) treeview.$(OBJEXT) \
-	telstat.$(OBJEXT) remoteObjects.$(OBJEXT) votable.$(OBJEXT) \
-	json_parse.$(OBJEXT) io_gui.$(OBJEXT) lgs.$(OBJEXT) \
-	resources.$(OBJEXT)
+	fc.$(OBJEXT) fc_output.$(OBJEXT) progress.$(OBJEXT) \
+	adc.$(OBJEXT) lunar.$(OBJEXT) solar.$(OBJEXT) earth.$(OBJEXT) \
+	mercury.$(OBJEXT) venus.$(OBJEXT) mars.$(OBJEXT) \
+	jupiter.$(OBJEXT) saturn.$(OBJEXT) uranus.$(OBJEXT) \
+	neptune.$(OBJEXT) pluto.$(OBJEXT) rise_set.$(OBJEXT) \
+	sidereal_time.$(OBJEXT) vsop87.$(OBJEXT) julian_day.$(OBJEXT) \
+	utility.$(OBJEXT) transform.$(OBJEXT) precession.$(OBJEXT) \
+	nutation.$(OBJEXT) dynamical_time.$(OBJEXT) \
+	http-client.$(OBJEXT) configfile.$(OBJEXT) skymon.$(OBJEXT) \
+	treeview.$(OBJEXT) telstat.$(OBJEXT) remoteObjects.$(OBJEXT) \
+	votable.$(OBJEXT) json_parse.$(OBJEXT) io_gui.$(OBJEXT) \
+	lgs.$(OBJEXT) resources.$(OBJEXT)
 hskymon_OBJECTS = $(am_hskymon_OBJECTS)
 hskymon_LDADD = $(LDADD)
 am__DEPENDENCIES_1 =
@@ -442,7 +442,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = . libnova std_data debian sample icons
 hskymon_SOURCES = \
-	 main.c gtkut.c calcpa.c fc.c fc_output.c adc.c lunar.c solar.c earth.c mercury.c venus.c mars.c jupiter.c saturn.c uranus.c neptune.c pluto.c rise_set.c sidereal_time.c vsop87.c julian_day.c utility.c transform.c precession.c nutation.c dynamical_time.c http-client.c main.h gtkut.h configfile.c skymon.c treeview.c telstat.c remoteObjects.c hsc.h votable.c json_parse.c io_gui.c lgs.c resources.c votable.h remoteObjects.h configfile.h esostd.h ssl.h gen2.h post.h post_sdss.h post_lamost.h post_kepler.h post_smoka.h post_hst.h post_eso.h get_gemini.h io_gui.h lgs.h resources.h
+	 main.c gtkut.c calcpa.c fc.c fc_output.c progress.c adc.c lunar.c solar.c earth.c mercury.c venus.c mars.c jupiter.c saturn.c uranus.c neptune.c pluto.c rise_set.c sidereal_time.c vsop87.c julian_day.c utility.c transform.c precession.c nutation.c dynamical_time.c http-client.c main.h gtkut.h configfile.c skymon.c treeview.c telstat.c remoteObjects.c hsc.h votable.c json_parse.c io_gui.c lgs.c resources.c votable.h remoteObjects.h configfile.h esostd.h ssl.h gen2.h post.h post_sdss.h post_lamost.h post_kepler.h post_smoka.h post_hst.h post_eso.h get_gemini.h io_gui.h lgs.h resources.h
 
 CLEANFILES = *~ libnova/*~ std_data/*~ debian/*~ sample/*~ icons/*~ \
 	$(BUILT_SOURCES)
@@ -610,6 +610,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nutation.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pluto.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/precession.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/progress.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/remoteObjects.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/resources.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rise_set.Po@am__quote@
